<resources>
    <string name="app_name">NavComp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="login_button">Login</string>
    <string name="register">Register</string>
    <string name="lupa_password">Forget Password ?</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="help_fragment">Help Fragment</string>
    <string name="forget_password_fragment">Forget Password Fragment</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="year_of_birth">Year of birth</string>
</resources>